# typedef

./: .gitignore  README.md  typedefsolver.cabal
app/: Main.hs
doc/: makefile  typedefsolver.tex
src/: Solver.lhs
src/Parser/: ConstrParser.lhs  CoreCParser.lhs
src/Solver/: ConstrSolver.lhs  Subst.lhs
src/Syntax/: Constraint.lhs  CoreC.lhs  Type.lhs
src/Utils/: Pretty.lhs  SolverMonad.lhs
test/: Spec.hs
test/cases/: T0.c  T0.ctr  T0.tdef  T1.c  T1.ctr  T1.tdef  T2.c  T2.ctr  T2.tdef  T3.c  T3.ctr  T3.tdef  T4.c  T4.ctr  T4.tdef  T5.c  T5.ctr  T6.c  T6.ctr  T6.tdef
