name:                typedefsolver
version:             0.1.0.0
synopsis:            Solver for simple constraints and typedef inferencer.
description:         README.md
homepage:            http://github.com/rodrigogribeiro/typedef
license:             BSD3
license-file:        LICENSE
author:              Rodrigo Ribeiro
maintainer:          rodrigo@decsi.ufop.br
copyright:           2015 Rodrigo
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Solver
                       Parser.ConstrParser
                       Solver.ConstrSolver
                       Solver.Subst
                       Syntax.Constraint
                       Syntax.Type
                       Syntax.CoreC
                       Gen.ConstrGen
                       Utils.SolverMonad
                       Utils.Pretty
  build-depends:       base >= 4.7 && < 5
                       , parsec
                       , pretty
                       , mtl
                       , containers
                       , syb
  default-language:    Haskell2010

executable typedefsolver-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , filepath                    
                     , typedefsolver
  default-language:    Haskell2010

test-suite typedefsolver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , typedefsolver
                     , HUnit
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rodrigogribeiro/typedef
